增加Fuel支持，可调用ServiceInfo接口，还未从settings中读取配置，service info界面存在不会自动换行的问题

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,4 +84,5 @@
     <string name="vps_setup_vps_veid">veid</string>
     <string name="vps_setup_vps_api_key">api key</string>
     <string name="title_activity_settings_demo1">Settings</string>
+    <string name="title_activity_vps_service_info">VpsServiceInfoActivity</string>
 </resources>
